syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommPurchaseVerifyRequestProtobuf";

message	CommPurchaseVerifyRequest  {
	optional	string	receipt = 10;
	optional	uint32	type = 11;
}