syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommPurchaseVerifyResponseProtobuf";

message	CommPurchaseVerifyResponse  {
	 uint32	result = 10;
	 CommPurchaseVerifyRequest	request = 11;
	repeated	HeroBasicInfo	heros = 12;
	repeated	PlayerItem	items = 13;
	repeated	PlayerItem	archives = 14;
}